--- a/package.json
+++ b/package.json
@@ -6,9 +6,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.16",
+    "@types/firebase": "^3.2.1",
+    "firebase": "^9.18.0",
+    "firebase-admin": "^11.5.0",
     "next": "latest",
+    "next-auth": "^4.20.1",
+    "openai": "^3.2.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-firebase-hooks": "^5.1.1",
+    "react-hot-toast": "^2.4.0"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
