--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-hot-toast": "^2.4.0",
+    "react-image": "^4.1.0",
     "react-select": "^5.7.1",
     "swr": "^2.1.0"
   },
